--- a/src/public/index.html
+++ b/src/public/index.html
@@ -284,6 +284,60 @@
               </div>
             </div>
 
+            <!-- Programs Page -->
+            <div id="programs-page" class="content-page">
+              <div class="d-flex justify-content-between mb-4">
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  id="add-program-btn"
+                >
+                  <i class="fas fa-plus"></i> Add New Program
+                </button>
+                <div class="d-flex">
+                  <input
+                    type="text"
+                    class="form-control me-2"
+                    id="program-search-input"
+                    placeholder="Search programs..."
+                  />
+                  <select class="form-select me-2" id="program-school-filter">
+                    <option value="all">All Schools</option>
+                    <!-- Will be populated dynamically -->
+                  </select>
+                  <select class="form-select" id="program-status-filter">
+                    <option value="all">All Status</option>
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>Code</th>
+                      <th>School</th>
+                      <th>Program</th>
+                      <th>Type</th>
+                      <th>Duration</th>
+                      <th>Credits</th>
+                      <th>Status</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="programs-table">
+                    <tr>
+                      <td colspan="8" class="text-center">
+                        Loading programs...
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
             <!-- Semesters Page -->
             <div id="semesters-page" class="content-page">
               <div class="d-flex justify-content-between mb-4">
@@ -697,6 +751,250 @@
       </div>
     </div>
 
+    <!-- Program Modal -->
+    <div
+      class="modal fade"
+      id="programModal"
+      tabindex="-1"
+      aria-labelledby="programModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="programModalLabel">Add New Program</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="program-form">
+              <input type="hidden" id="program-id-field" />
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="program-school-field" class="form-label"
+                    >School *</label
+                  >
+                  <select
+                    class="form-select"
+                    id="program-school-field"
+                    required
+                  >
+                    <option value="">Select a school</option>
+                    <!-- Will be populated dynamically -->
+                  </select>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="program-type-field" class="form-label"
+                    >Program Type *</label
+                  >
+                  <select class="form-select" id="program-type-field" required>
+                    <option value="">Select type</option>
+                    <option value="UG">Undergraduate (UG)</option>
+                    <option value="PG">Postgraduate (PG)</option>
+                    <option value="RESEARCH">Research</option>
+                  </select>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="program-long-name-field" class="form-label"
+                    >Program Long Name *</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="program-long-name-field"
+                    maxlength="100"
+                    required
+                  />
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="program-short-name-field" class="form-label"
+                    >Program Short Name *</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="program-short-name-field"
+                    maxlength="20"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="program-duration-field" class="form-label"
+                    >Duration (Years) *</label
+                  >
+                  <select
+                    class="form-select"
+                    id="program-duration-field"
+                    required
+                  >
+                    <option value="">Select duration</option>
+                    <option value="2">2 Years</option>
+                    <option value="3">3 Years</option>
+                    <option value="4">4 Years</option>
+                    <option value="5">5 Years</option>
+                  </select>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="program-credits-field" class="form-label"
+                    >Total Credits *</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="program-credits-field"
+                    min="1"
+                    max="300"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="program-dept-long-name-field" class="form-label"
+                    >Department Long Name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="program-dept-long-name-field"
+                    maxlength="100"
+                  />
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="program-dept-short-name-field" class="form-label"
+                    >Department Short Name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="program-dept-short-name-field"
+                    maxlength="20"
+                  />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="program-spec-long-name-field" class="form-label"
+                    >Specialization Long Name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="program-spec-long-name-field"
+                    maxlength="100"
+                  />
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="program-spec-short-name-field" class="form-label"
+                    >Specialization Short Name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="program-spec-short-name-field"
+                    maxlength="20"
+                  />
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="program-description-field" class="form-label"
+                  >Description</label
+                >
+                <textarea
+                  class="form-control"
+                  id="program-description-field"
+                  rows="3"
+                ></textarea>
+              </div>
+              <div class="form-check mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="program-is-active-field"
+                  checked
+                />
+                <label class="form-check-label" for="program-is-active-field">
+                  Active
+                </label>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" id="save-program-btn">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Program Delete Confirmation Modal -->
+    <div
+      class="modal fade"
+      id="programDeleteModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Delete Program</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Are you sure you want to delete this program? This action cannot
+              be undone.
+            </p>
+            <p>
+              <strong>Program Code:</strong>
+              <span id="program-delete-code"></span>
+            </p>
+            <p>
+              <strong>Program Name:</strong>
+              <span id="program-delete-name"></span>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="confirm-program-delete-btn"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -718,5 +1016,6 @@
     <script src="js/auth.js"></script>
     <script src="js/schools.js"></script>
     <script src="js/semesters.js"></script>
+    <script src="js/programs.js"></script>
   </body>
 </html>
