--- a/src/public/index.html
+++ b/src/public/index.html
@@ -836,6 +836,7 @@
                     required
                   >
                     <option value="">Select duration</option>
+                    <option value="1">1 Year</option>
                     <option value="2">2 Years</option>
                     <option value="3">3 Years</option>
                     <option value="4">4 Years</option>
