--- a/src/public/index.html
+++ b/src/public/index.html
@@ -60,6 +60,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#" id="venues-link">
+                  <i class="fas fa-building me-2"></i>
+                  Venues
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#" id="users-link">
                   <i class="fas fa-users me-2"></i>
                   Users
@@ -379,6 +385,53 @@
                       <td colspan="5" class="text-center">
                         Loading semesters...
                       </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <!-- Venues Page -->
+            <div id="venues-page" class="content-page">
+              <div class="d-flex justify-content-between mb-4">
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  id="add-venue-btn"
+                >
+                  <i class="fas fa-plus"></i> Add New Venue
+                </button>
+                <div class="d-flex">
+                  <input
+                    type="text"
+                    class="form-control me-2"
+                    id="venue-search-input"
+                    placeholder="Search venues..."
+                  />
+                  <select class="form-select" id="venue-status-filter">
+                    <option value="all">All Status</option>
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>Venue</th>
+                      <th>School</th>
+                      <th>Capacity</th>
+                      <th>Infrastructure Type</th>
+                      <th>Seats</th>
+                      <th>Status</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="venues-table">
+                    <tr>
+                      <td colspan="7" class="text-center">Loading venues...</td>
                     </tr>
                   </tbody>
                 </table>
@@ -996,6 +1049,174 @@
       </div>
     </div>
 
+    <!-- Venue Modal -->
+    <div
+      class="modal fade"
+      id="venueModal"
+      tabindex="-1"
+      aria-labelledby="venueModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="venueModalLabel">Add New Venue</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="venue-form">
+              <input type="hidden" id="venue-id-field" />
+              <div class="mb-3">
+                <label for="venue-name-field" class="form-label">Venue *</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="venue-name-field"
+                  maxlength="10"
+                  required
+                />
+                <div class="form-text">
+                  Enter venue name or code (max 10 characters).
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="venue-school-field" class="form-label"
+                  >Assigned To School</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="venue-school-field"
+                  maxlength="10"
+                />
+                <div class="form-text">
+                  School code (optional, max 10 characters).
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="venue-capacity-field" class="form-label"
+                  >Capacity *</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="venue-capacity-field"
+                  min="1"
+                  required
+                />
+                <div class="form-text">Maximum capacity of the venue.</div>
+              </div>
+              <div class="mb-3">
+                <label for="venue-infra-type-field" class="form-label"
+                  >Infrastructure Type *</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="venue-infra-type-field"
+                  maxlength="20"
+                  required
+                />
+                <div class="form-text">
+                  Type of venue (classroom, lab, etc., max 20 characters).
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="venue-seats-field" class="form-label">Seats</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="venue-seats-field"
+                  min="0"
+                />
+                <div class="form-text">Number of seats (optional).</div>
+              </div>
+              <div class="form-check mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="venue-is-active-field"
+                  checked
+                />
+                <label class="form-check-label" for="venue-is-active-field">
+                  Active
+                </label>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" id="save-venue-btn">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Venue Delete Confirmation Modal -->
+    <div
+      class="modal fade"
+      id="venueDeleteModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Delete Venue</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Are you sure you want to delete this venue? This action cannot be
+              undone.
+            </p>
+            <p>
+              <strong>Venue:</strong>
+              <span id="venue-delete-name"></span>
+            </p>
+            <p>
+              <strong>Type:</strong>
+              <span id="venue-delete-type"></span>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="confirm-venue-delete-btn"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -1018,5 +1239,6 @@
     <script src="js/schools.js"></script>
     <script src="js/semesters.js"></script>
     <script src="js/programs.js"></script>
+    <script src="js/venues.js"></script>
   </body>
 </html>
