--- a/src/public/index.html
+++ b/src/public/index.html
@@ -66,6 +66,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#" id="faculty-link">
+                  <i class="fas fa-chalkboard-teacher me-2"></i>
+                  Faculty
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#" id="users-link">
                   <i class="fas fa-users me-2"></i>
                   Users
@@ -432,6 +438,59 @@
                   <tbody id="venues-table">
                     <tr>
                       <td colspan="7" class="text-center">Loading venues...</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <!-- Faculty Page -->
+            <div id="faculty-page" class="content-page">
+              <div class="d-flex justify-content-between mb-4">
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  id="add-faculty-btn"
+                >
+                  <i class="fas fa-plus"></i> Add New Faculty
+                </button>
+                <div class="d-flex">
+                  <input
+                    type="text"
+                    class="form-control me-2"
+                    id="faculty-search-input"
+                    placeholder="Search faculty..."
+                  />
+                  <select class="form-select me-2" id="faculty-school-filter">
+                    <option value="all">All Schools</option>
+                    <!-- Will be populated dynamically -->
+                  </select>
+                  <select class="form-select" id="faculty-status-filter">
+                    <option value="all">All Status</option>
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>Name</th>
+                      <th>Employee ID</th>
+                      <th>Designation</th>
+                      <th>School</th>
+                      <th>Email</th>
+                      <th>Status</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="faculty-table">
+                    <tr>
+                      <td colspan="7" class="text-center">
+                        Loading faculty...
+                      </td>
                     </tr>
                   </tbody>
                 </table>
@@ -1217,6 +1276,169 @@
       </div>
     </div>
 
+    <!-- Faculty Modal -->
+    <div
+      class="modal fade"
+      id="facultyModal"
+      tabindex="-1"
+      aria-labelledby="facultyModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="facultyModalLabel">Add New Faculty</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="faculty-form">
+              <input type="hidden" id="faculty-id-field" />
+              <div class="mb-3">
+                <label for="faculty-name-field" class="form-label"
+                  >Name *</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="faculty-name-field"
+                  maxlength="100"
+                  required
+                />
+                <div class="form-text">
+                  Faculty member's full name (required).
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="faculty-employee-id-field" class="form-label"
+                  >Employee ID *</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="faculty-employee-id-field"
+                  required
+                />
+                <div class="form-text">Unique employee ID (required).</div>
+              </div>
+              <div class="mb-3">
+                <label for="faculty-designation-field" class="form-label"
+                  >Designation</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="faculty-designation-field"
+                  maxlength="50"
+                />
+                <div class="form-text">
+                  Faculty member's job title or designation.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="faculty-school-field" class="form-label"
+                  >School *</label
+                >
+                <select class="form-select" id="faculty-school-field" required>
+                  <option value="">Select a school</option>
+                  <!-- Will be populated dynamically -->
+                </select>
+                <div class="form-text">School affiliation (required).</div>
+              </div>
+              <div class="mb-3">
+                <label for="faculty-email-field" class="form-label"
+                  >Email</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="faculty-email-field"
+                  maxlength="100"
+                />
+                <div class="form-text">Faculty member's email address.</div>
+              </div>
+              <div class="form-check mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="faculty-is-active-field"
+                  checked
+                />
+                <label class="form-check-label" for="faculty-is-active-field"
+                  >Active</label
+                >
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" id="save-faculty-btn">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Faculty Delete Confirmation Modal -->
+    <div
+      class="modal fade"
+      id="facultyDeleteModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Delete Faculty</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Are you sure you want to delete this faculty member? This action
+              cannot be undone.
+            </p>
+            <p><strong>Name:</strong> <span id="faculty-delete-name"></span></p>
+            <p>
+              <strong>Employee ID:</strong>
+              <span id="faculty-delete-employee-id"></span>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="confirm-faculty-delete-btn"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -1240,5 +1462,6 @@
     <script src="js/semesters.js"></script>
     <script src="js/programs.js"></script>
     <script src="js/venues.js"></script>
+    <script src="js/faculty.js"></script>
   </body>
 </html>
