Enhance timetable borders and legends

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -849,7 +849,7 @@
 
                     <div class="table-responsive">
                       <table
-                        class="table table-bordered"
+                        class="table table-bordered timetable-container"
                         id="master-slot-table"
                       >
                         <thead>
