--- a/src/public/index.html
+++ b/src/public/index.html
@@ -24,7 +24,7 @@
           id="sidebar"
           class="col-md-3 col-lg-2 d-md-block bg-dark sidebar collapse"
         >
-          <div class="position-sticky">
+          <div class="position-sticky sidebar-sticky">
             <div class="text-center p-3">
               <h3 class="text-white">SCFC ERP</h3>
             </div>
