--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1278,6 +1278,13 @@
                 <div>
                   <button
                     type="button"
+                    class="btn btn-danger me-2"
+                    id="create-admin-user-btn"
+                  >
+                    <i class="fas fa-user-shield"></i> Create Admin Account
+                  </button>
+                  <button
+                    type="button"
                     class="btn btn-primary me-2"
                     id="create-faculty-user-btn"
                   >
@@ -3305,6 +3312,93 @@
       </div>
     </div>
 
+    <!-- Change Password Modal -->
+    <div
+      class="modal fade"
+      id="changePasswordModal"
+      tabindex="-1"
+      aria-labelledby="changePasswordModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="changePasswordModalLabel">
+              Change Password
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div
+              id="password-change-alert"
+              class="alert d-none"
+              role="alert"
+            ></div>
+            <form id="change-password-form">
+              <div class="mb-3">
+                <label for="current-password-field" class="form-label"
+                  >Current Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="current-password-field"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="new-password-field" class="form-label"
+                  >New Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="new-password-field"
+                  required
+                />
+                <div class="form-text">
+                  Password must be at least 8 characters with 1 uppercase, 1
+                  lowercase, 1 digit, and 1 special character.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="confirm-password-field" class="form-label"
+                  >Confirm New Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="confirm-password-field"
+                  required
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              id="save-password-btn"
+            >
+              Change Password
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -3335,5 +3429,6 @@
     <script src="js/faculty-allocation.js"></script>
     <script src="js/timetable-coordinator.js"></script>
     <script src="js/users.js"></script>
+    <script src="js/password-change.js"></script>
   </body>
 </html>
