--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1446,6 +1446,17 @@
                       Course Registration
                     </a>
                   </li>
+                  <!-- View my Slot TimeTable -->
+                  <li class="nav-item">
+                    <a
+                      class="nav-link text-white"
+                      href="#"
+                      id="student-timetable-link"
+                    >
+                      <i class="fas fa-calendar-alt me-2"></i>
+                      View my Slot TimeTable
+                    </a>
+                  </li>
                   <!-- Change Password option -->
                   <li class="nav-item">
                     <a
@@ -1639,6 +1650,46 @@
                               class="mb-4"
                             >
                               <!-- Course details table will be populated here -->
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Student Timetable Content -->
+                <div
+                  id="student-timetable-page"
+                  class="student-content-page"
+                  style="display: none"
+                >
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div style="margin-left: 50px; margin-right: 20px">
+                        <div class="card shadow mb-4">
+                          <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">
+                              My Slot TimeTable
+                            </h6>
+                          </div>
+                          <div class="card-body">
+                            <div id="standalone-timetable-container">
+                              <div
+                                id="standalone-timetable-loading"
+                                style="text-align: center; padding: 40px"
+                              >
+                                <div
+                                  class="spinner-border text-primary"
+                                  role="status"
+                                >
+                                  <span class="visually-hidden"
+                                    >Loading...</span
+                                  >
+                                </div>
+                                <p class="mt-3">
+                                  Select a semester to view your timetable...
+                                </p>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -3922,6 +3973,7 @@
     <script src="js/users.js"></script>
     <script src="js/password-change.js"></script>
     <script src="js/course-registration.js"></script>
+    <script src="js/student-timetable.js"></script>
     <script src="js/system-config.js"></script>
   </body>
 </html>
