feat: Add admin password reset functionality
✅ Student password reset endpoint and UI (yellow key icons)
✅ Faculty/coordinator password reset endpoint and UI
✅ Bulk student user creation with dedicated button

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -757,10 +757,17 @@
                   </button>
                   <button
                     type="button"
-                    class="btn btn-success"
+                    class="btn btn-success me-2"
                     id="import-students-btn"
                   >
-                    <i class="fas fa-file-import"></i> Import Students
+                    <i class="fas fa-upload"></i> Import Students
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-warning"
+                    id="create-user-accounts-btn"
+                  >
+                    <i class="fas fa-user-plus"></i> Create User Accounts
                   </button>
                 </div>
                 <div class="d-flex">
